--- a/src/app/page.css
+++ b/src/app/page.css
@@ -2,46 +2,47 @@ body {
     background-color: #fff;
 }
 .main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-  }
-  
-  .logo {
-    margin-bottom: 20px;
-  }
-  
-  .button-container {
-    text-align: center;
-  }
-  
-.description {
-    color: #2c3e50;
-    font-size: 16pt;
-    margin-bottom: 30px;
-    font-family: Roboto, sans-serif;
-    font-weight: bold;
+  background: linear-gradient(to right, #b2ebf2, #e0f7fa); /* Degradê azul claro */
+  min-height: 100vh; /* Garante que o fundo cubra toda a altura da página */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
 }
 
-  .button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 400px;
-    height: 70px;
-    padding: 10px 20px;
-    background-color: #406da0;
-    border: 2px double #000;
-    color: white;
-    text-decoration: none;
-    border-radius: 10px;
-    box-shadow: 3px 3px 3px #3d3d3d;
-    transition: background-color 0.3s ease;
-  }
-  
-  .button:hover {
-    background-color: #005bb5;
-  }
-  
+.logo {
+  margin-bottom: 20px;
+}
+
+.button-container {
+  text-align: center;
+}
+
+.description {
+  color: #2c3e50;
+  font-size: 16pt;
+  margin-bottom: 30px;
+  font-family: Roboto, sans-serif;
+  font-weight: bold;
+}
+
+.button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 400px;
+  height: 70px;
+  padding: 10px 20px;
+  background-color: #406da0;
+  border: 2px double #000;
+  color: white;
+  text-decoration: none;
+  border-radius: 10px;
+  box-shadow: 3px 3px 3px #3d3d3d;
+  transition: background-color 0.3s ease;
+}
+
+.button:hover {
+  background-color: #005bb5;
+}
