--- a/src/app/page.css
+++ b/src/app/page.css
@@ -11,13 +11,14 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 20px;
-  margin: 0;
+  margin-top: 30;
+  margin-bottom: 20px;
   padding: 0;
   overflow-x: hidden;
 }
 
 .logo {
+  margin-top: 30px;
   margin-bottom: 20px;
 }
 
