--- a/src/app/components/LinkButtom.module.css
+++ b/src/app/components/LinkButtom.module.css
@@ -10,7 +10,7 @@
     border-radius: 0.4em;
     box-shadow: 0.1em 0.1em;
     cursor: pointer;
-    width: 300px;
+    width: 450px;
     height: 70px;
     color: #000;
     margin-bottom: 20px;
@@ -26,3 +26,8 @@
     box-shadow: 0.05em 0.05em;
   }
   
+  @media (max-width: 400px) {
+    .button {
+      width: 300px;
+    }
+  }
