--- a/src/app/components/LinkButtom.module.css
+++ b/src/app/components/LinkButtom.module.css
@@ -1,4 +1,3 @@
-/* From Uiverse.io by gharsh11032000 */ 
 .button {
   cursor: pointer;
   position: relative;
@@ -27,13 +26,13 @@
   transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
 }
 
-.button:hover::before {
+.button:hover::before { /* hover efect */
   scale: 7.5;
 }
 
 .button:hover {
   color: #fafafa;
-  scale: 1;
+  scale: 1.06;
   box-shadow: 0 0px 20px rgba(193, 163, 98,0.4);
 }
 
