--- a/src/app/page.css
+++ b/src/app/page.css
@@ -3,17 +3,18 @@ body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-    background: linear-gradient(to top right, #88b686, #ffffff); /* degradê azul claro */
+    background: linear-gradient(to top right, darkcyan, lightcyan); /* degradê azul claro */
 }
 .main {
-  min-height: 98vh; 
+  height: 100vh; 
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  margin-top: 30;
-  margin-bottom: 20px;
-  padding: 0;
+  justify-content: top;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-top: 40px;
+  padding-bottom: 0;
   overflow-x: hidden;
 }
 
@@ -21,6 +22,7 @@ body {
   margin-top: 30px;
   margin-bottom: 20px;
   border-radius: 50px;
+  padding: 2px;
 }
 
 .button-container {
