--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,3 +32,12 @@ body {
   }
 }
 */
+
+body {
+  background-color: #fff;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  background: linear-gradient(to top right, darkcyan, lightcyan);
+  /* degradê azul claro */
+}
