--- a/src/app/fluxograma/Page.module.css
+++ b/src/app/fluxograma/Page.module.css
@@ -7,6 +7,10 @@
     align-items: center;
 }
 
+.options {
+    border: 2px solid #000;
+}
+
 .btImage {
     height: 50px;
     border-radius: 20px;
