--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -55,10 +55,12 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  align-items: center;
+  text-align: center;
   gap: 20px;
   height: 250px;
   width: 280px;
-  padding: 10px;
+  padding: 30px;
   border: 1px solid #424242;
   border-radius: 10px;
   background-color: rgba(255, 255, 255, 0.7);
