--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,80 +1,3 @@
-/*@tailwind base;
+@tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 255, 255, 255;
-    --background-end-rgb: 255, 255, 255;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
-}
-*/
-
-body {
-  background-color: #fff;
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
-  background: linear-gradient(to top right, darkcyan, lightcyan);
-  /* degradê azul claro */
-}
-
-.mainFluxograma {
-  display: flex;
-  border: 2px solid #000;
-  height: 100vh;
-  width: 100%;
-  justify-content: center;
-  align-items: center;
-}
-
-.options {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  text-align: center;
-  gap: 20px;
-  height: 260px;
-  width: 100%;
-  max-width: 240px;
-  padding: 30px;
-  border: 1px solid #424242;
-  border-radius: 8px;
-  background-color: rgba(255, 255, 255, 0.7);
-}
-
-.btImage {
-  height: 50px;
-  width: 100%;
-  border-radius: 20px;
-  border: 1px solid #fff;
-  box-shadow: 3px 3px 3px #979797;
-  font-size: 14pt;
-  cursor: pointer;
-  color: #fff;
-  background-color: rgb(60, 85, 170);
-}
