--- a/src/app/eventos/[id]/page.css
+++ b/src/app/eventos/[id]/page.css
@@ -1,20 +1,64 @@
 body {
-	display: flex;
-	justify-content: center;
-	background-color: whitesmoke;
+  background-color: whitesmoke;
 }
 
-input {
-	border: 1px solid gray;
+.container {
+  padding: 2rem;
+  font-family: Arial, sans-serif;
+  max-width: 600px;
+  margin: 0 auto;
 }
 
-.titleEventPage {
-	font-weight: bold;
-	color: #0070f3;
+form.form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-top: 1.5rem;
+  padding: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  background-color: #f9f9f9;
+  margin-bottom: 20px;
 }
 
-.titleForm {
-	margin-bottom: 16px;
-	font-weight: bold;
-	font-size: 18px;
+form.form input {
+  padding: 0.6rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 1rem;
+}
+
+form.form button {
+  background-color: #0070f3;
+  color: white;
+  border: none;
+  padding: 0.8rem;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: background-color 0.3s ease;
+}
+
+form.form button:hover {
+  background-color: #005ac1;
+}
+
+p {
+  margin-top: 1rem;
+}
+
+.eventNoFound {
+  margin-top: 20px;
+}
+
+.datesStatus {
+  border: 1px solid slategray;
+  border-radius: 8px;
+  padding: 0 8px;
+  margin-bottom: 30px;
+}
+
+.inicioFimStatus {
+  display: inline-block; /* for to set width */
+  width: 55px;
 }
