--- a/src/app/eventos/admin/[id]/page.css
+++ b/src/app/eventos/admin/[id]/page.css
@@ -45,7 +45,8 @@ button {
 }
 
 /* Botão Editar */
-button[style*="background: #0070f3"] {
+.btnExcluir,
+.btnEditar {
     background-color: #0070f3;
     color: white;
     padding: 0.4rem 0.8rem;
@@ -54,22 +55,17 @@ button[style*="background: #0070f3"] {
     margin-right: 0.5rem;
 }
 
-/* Botão Excluir */
-button[style*="background: red"] {
-    background-color: #ef4444;
-    color: white;
-    padding: 0.4rem 0.8rem;
-    border: none;
-    border-radius: 4px;
-}
-
 /* Formulário de Edição */
 .edit-form {
-    margin: 1rem 0;
+    display: flex;
+    flex-direction: column;
+    margin: 0.5rem 0;
     padding: 1rem;
     border: 1px solid #d1d5db;
     border-radius: 8px;
     background-color: #f9fafb;
+    font-size: 16px;
+    font-weight: bold;
 }
 
 .edit-form h3 {
@@ -83,26 +79,32 @@ button[style*="background: red"] {
     max-width: 400px;
     padding: 0.5rem;
     margin-bottom: 0.5rem;
+    margin-left: 8px;
     border: 1px solid #d1d5db;
     border-radius: 6px;
+    font-size: 16px;
+}
+
+.btns {
+    display: flex;
+    gap: 10px;
 }
 
 .edit-form button {
-    margin-right: 0.5rem;
+    border: none;
+    width: 150px;
+    color: white;
+    border-radius: 4px;
+    font-weight: bolder;
+    font-size: 16px;
 }
 
 .edit-form .save-btn {
     background-color: #10b981;
-    color: white;
-    border: none;
     padding: 0.4rem 0.8rem;
-    border-radius: 4px;
 }
 
 .edit-form .cancel-btn {
     background-color: #6b7280;
-    color: white;
-    border: none;
     padding: 0.4rem 0.8rem;
-    border-radius: 4px;
 }
