--- a/src/app/eventos/admin/page.css
+++ b/src/app/eventos/admin/page.css
@@ -1,3 +1,59 @@
 .loading {
     margin: 8px;
 }
+
+.menuBar {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    width: 100%;
+    height: 40px;
+    border-top: 1px solid lightgray;
+    border-bottom: 1px solid lightgray;
+    margin-bottom: 30px;
+    padding: 10px;
+}
+
+.userLogged {
+    padding: 0.5rem 0;
+    width: 400px;
+}
+
+.adminBtns {
+    display: flex;
+    gap: 8px;
+}
+
+.btnNewEvent,
+.btnSair {
+    color: white;
+    border: none;
+    cursor: pointer;
+    padding: 0.5rem 1rem;
+    height: 40px;
+    border-radius: 4px;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.btnNewEvent {
+    background-color: royalblue;
+}
+
+.btnSair {
+    background-color: red;
+}
+
+@media (max-width: 767px) {
+    .menuBar {
+        flex-direction: column;
+        height: auto;
+        justify-content: center;
+    }
+    .userLogged {
+        margin-bottom: 0.5rem;
+    }
+    .adminBtns {
+        justify-content: center;
+    }
+}
