Add check certificate, Add page for consultation, to add new and to edit event

--- a/src/app/eventos/admin/gerenciar/novo/page.css
+++ b/src/app/eventos/admin/gerenciar/novo/page.css
@@ -17,6 +17,11 @@ body {
   font-size: 1.2rem;
 }
 
+.titleNewEvent {
+  text-align: center;
+  margin-top: 20px;
+}
+
 .message {
   padding: 1rem;
   margin-bottom: 1.5rem;
