--- a/src/app/eventos/layout.css
+++ b/src/app/eventos/layout.css
@@ -1,5 +1,14 @@
 body {
 	margin: 0;
+	padding: 0;
+}
+
+.eventos-top-header {
+	background-color: white;
+	box-shadow: 0 1px 5px rgb(200, 200, 200);
+	width: 100%;
+	padding: 12px;
+	text-align: center;
 }
 
 h1 {
