Added button New Subscription after make a subscription

--- a/src/app/eventos/[id]/page.css
+++ b/src/app/eventos/[id]/page.css
@@ -62,3 +62,30 @@ p {
   display: inline-block; /* for to set width */
   width: 55px;
 }
+
+.success-container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.success-message {
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: green;
+  margin: 1rem 0;
+}
+
+.new-registration-btn {
+  margin-top: 1rem;
+  margin-bottom: 1.5rem;
+  padding: 0.5rem 1rem;
+  height: 40px;
+  background-color: #37a9d1;
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
