--- a/src/app/eventos/layout.css
+++ b/src/app/eventos/layout.css
@@ -6,7 +6,7 @@ body {
 .eventos-top-header {
 	background-color: white;
 	box-shadow: 0 1px 5px rgb(200, 200, 200);
-	width: 100%;
+	width: calc(100% - 5px);
 	padding: 12px;
 	text-align: center;
 }
