--- a/src/app/eventos/admin/[id]/page.css
+++ b/src/app/eventos/admin/[id]/page.css
@@ -9,6 +9,19 @@ button {
     margin-bottom: 8px;
 }
 
+.linkRegistrarPresenca {
+    text-decoration: none;
+    background-color: royalblue;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    padding: 0 8px 2px 8px;
+}
+
+.linkRegistrarPresenca:hover {
+    background-color: darkblue;
+}
+
 /* Tabela de Participantes */
 table {
     width: 100%;
