--- a/src/app/eventos/layout.css
+++ b/src/app/eventos/layout.css
@@ -1,6 +1,7 @@
 body {
 	margin: 0;
 	padding: 0;
+	background: linear-gradient(to top, #b4e3e3, #ffffff); /* gradient lightgray */
 }
 
 .eventos-top-header {
