Added new page for print list Participantes

--- a/src/app/eventos/admin/[id]/page.css
+++ b/src/app/eventos/admin/[id]/page.css
@@ -9,12 +9,14 @@ button {
     margin-bottom: 8px;
 }
 
-.linkRegistrarPresenca {
+.linkRegistrarPresenca,
+.linkImprimirFolha {
     text-decoration: none;
     background-color: royalblue;
     color: white;
     border: none;
     border-radius: 4px;
+    margin-left: 12px;
     padding: 0 8px 2px 8px;
 }
 
