--- a/src/app/eventos/components/EventoForm.css
+++ b/src/app/eventos/components/EventoForm.css
@@ -2,7 +2,7 @@
 
 .evento-form {
   max-width: 600px;
-  margin: 12px auto;
+  margin: 12px auto 60px auto;
   padding: 12px;
   background-color: #ffffff;
   border: 1px solid #e0e0e0;
