--- a/src/app/eventos/[id]/page.css
+++ b/src/app/eventos/[id]/page.css
@@ -16,7 +16,7 @@ form.form {
   flex-direction: column;
   gap: 1.5rem;
   margin-top: 0.5rem;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   padding: 1.5rem;
   border: 1px solid #ccc;
   border-radius: 8px;
@@ -26,6 +26,12 @@ form.form {
 .form-floating {
   position: relative;
   width: 100%;
+}
+
+.error-message {
+  color: orangered;
+  font-size: 16px;
+  font-weight: bold;
 }
 
 .form-floating input {
