--- a/src/app/eventos/admin/evento/[eventoId]/presenca/page.css
+++ b/src/app/eventos/admin/evento/[eventoId]/presenca/page.css
@@ -28,6 +28,16 @@
   margin: 0 auto;
 }
 
+/* colors in table */
+.presenca-table tbody tr:nth-child(odd) {
+  background-color: #ffffff; /* branco */
+}
+
+/* colors in table */
+.presenca-table tbody tr:nth-child(even) {
+  background-color: #eeeeee; /* cinza bem claro */
+}
+
 .presencaTitle {
   font-weight: bold;
 }
@@ -49,7 +59,8 @@
 }
 
 .presenca-table th {
-  background-color: #f2f2f2;
+  background-color: #777777;
+  color: #ffffff;
 }
 
 .presenca-button {
