--- a/src/app/eventos/admin/page.css
+++ b/src/app/eventos/admin/page.css
@@ -5,6 +5,13 @@
 .admin-container {
     width: 95%;
     margin: auto;
+    text-align: center;
+}
+
+.titleAdmin {
+    font-size: 20px; 
+    font-eight: bold;
+    margin: 20px;
 }
 
 .menuBar {
@@ -12,16 +19,19 @@
     justify-content: space-between;
     flex-direction: row;
     width: 100%;
+    max-width: 900px;
     height: 40px;
     border-top: 1px solid lightgray;
     border-bottom: 1px solid lightgray;
+    margin: auto;
     margin-bottom: 30px;
     padding: 10px;
 }
 
 .userLogged {
     padding: 0.5rem 0;
-    width: 400px;
+    width: auto;
+    text-align: left;
 }
 
 .adminBtns {
@@ -41,8 +51,17 @@
     font-weight: bold;
 }
 
+ul {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-bottom: 60px;
+}
+
 .eventoItems {
+    background-color: white;
     width: 100%;
+    max-width: 900px;
     min-width: 350px;
     height: auto;
     gap: 10px;
@@ -54,8 +73,8 @@
     padding-left: 0;
     border: 1px solid #ccc;
     border-radius: 8px;
-    margin: 20px 0;
-    padding: 20px 8px;
+    margin: auto;
+    padding: 10px 8px 10px 12px;
 }
 
 .actionsBtn {
@@ -63,8 +82,7 @@
     justify-content: space-between;
     gap: 10px;
     width: auto;
-    height: 25px;
-    font-weight: bold;
+    height: 40px;
 }
 
 .btnNewEvent {
