--- a/src/app/eventos/admin/evento/[eventoId]/presenca/page.css
+++ b/src/app/eventos/admin/evento/[eventoId]/presenca/page.css
@@ -25,7 +25,7 @@
 .presenca-container {
   padding: 20px;
   max-width: 1000px;
-  margin: 0 auto;
+  margin: 0 auto 60px auto;
 }
 
 /* colors in table */
@@ -49,7 +49,6 @@
 .presenca-table {
   width: 100%;
   border-collapse: collapse;
-  margin-top: 20px;
 }
 
 .presenca-table th, .presenca-table td {
