--- a/src/app/eventos/certificados/page.css
+++ b/src/app/eventos/certificados/page.css
@@ -66,8 +66,8 @@ inpu[text] {
 .eventos-grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-/*  gap: 0.5rem;
-  margin-top: 0.5rem;*/
+  gap: 1.5rem;
+  margin-top: 0.5rem;
 }
 
 .evento-card {
