--- a/src/app/eventos/admin/[id]/page.css
+++ b/src/app/eventos/admin/[id]/page.css
@@ -23,8 +23,7 @@ button {
     color: white;
     border: none;
     border-radius: 4px;
-    margin-left: 12px;
-    padding: 0 8px 2px 8px;
+    padding: 8px;
 }
 
 .linkRegistrarPresenca:hover {
