--- a/src/app/eventos/admin/[id]/page.css
+++ b/src/app/eventos/admin/[id]/page.css
@@ -26,7 +26,9 @@ button {
     padding: 8px;
 }
 
-.linkRegistrarPresenca:hover {
+.linkRegistrarPresenca:hover,
+.linkImprimirFolha:hover,
+.linkImprimirElegiveis:hover {
     background-color: darkblue;
 }
 
