--- a/src/app/eventos/admin/page.css
+++ b/src/app/eventos/admin/page.css
@@ -9,7 +9,7 @@
 }
 
 .titleAdmin {
-    font-size: 20px; 
+    font-size: 20px;
     font-eight: bold;
     margin: 20px;
 }
@@ -39,6 +39,7 @@
     gap: 8px;
 }
 
+.btnUsers,
 .btnNewEvent,
 .btnSair {
     color: white;
@@ -49,6 +50,10 @@
     border-radius: 4px;
     font-size: 14px;
     font-weight: bold;
+}
+
+.btnUsers {
+    background-color: royalblue;
 }
 
 ul {
