--- a/src/app/eventos/admin/gerenciar/[id]/page.css
+++ b/src/app/eventos/admin/gerenciar/[id]/page.css
@@ -1,5 +1,10 @@
+.container {
+    margin: auto;
+}
+
 .titleEditEvento {
-    text-align: center;
+    width: 620px;
+    text-align: left;
     font-size: 18px;
     margin-top: 30px;
     margin-bottom: 0;
