--- a/src/app/eventos/layout.css
+++ b/src/app/eventos/layout.css
@@ -1,31 +1,43 @@
+/* layout.css */
+html, body {
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+}
+
 body {
-	margin: 0;
-	padding: 0;
-	background: linear-gradient(to top, #b4e3e3, #ffffff); /* gradient lightgray */
-	height: 100%;
+  background: linear-gradient(to top, #b4e3e3, #ffffff);
+  display: flex;
+  flex-direction: column;
+}
+
+section {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .eventos-top-header {
-	background-color: white;
-	box-shadow: 0 1px 5px rgb(200, 200, 200);
-	width: calc(100% - 5px);
-	padding: 12px;
-	text-align: center;
+  background-color: white;
+  box-shadow: 0 1px 5px rgb(200, 200, 200);
+  width: 100%;
+  padding: 12px;
+  text-align: center;
 }
 
 h1 {
-	font-size: 12pt;
-	margin-bottom: 4px;
+  font-size: 12pt;
+  margin-bottom: 4px;
 }
 
 h2 {
-	font-size: 11pt;
-	margin-top: 0px;
+  font-size: 11pt;
+  margin-top: 0px;
 }
 
 @media (max-width: 767px) {
-	.eventos-top-header {
-		width: 100%;
-		margin: auto;
-	}
+  .eventos-top-header {
+    width: 100%;
+    margin: auto;
+  }
 }
