--- a/src/app/eventos/admin/page.css
+++ b/src/app/eventos/admin/page.css
@@ -21,7 +21,7 @@
     flex-direction: row;
     width: 100%;
     max-width: 900px;
-    height: 40px;
+    height: auto;
     border-top: 1px solid lightgray;
     border-bottom: 1px solid lightgray;
     margin: auto;
@@ -30,8 +30,9 @@
 }
 
 .userLogged {
-    padding: 0.5rem 0;
+    padding: 0;
     width: auto;
+    height: auto;
     text-align: left;
 }
 
@@ -157,3 +158,7 @@ ul {
     margin-top: 0.25rem;
   }
 }
+
+/* confirmation modal */
+/* Estilos existentes... */
+
